# Luminamail

./: BREW_DEPLOY.md  clean_db.cjs  clean_db.py  lumina-mail.rb  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_engine.rs  auto_tagger.rs  cloud_upload.rs  commands.rs  db.rs  imap_client.rs  lib.rs  main.rs  models.rs  seed.rs  smtp_client.rs  telegram.rs
src/js/: app.js  auth.js  calendar.js  components.js  context-menu.js  groups.js  settings.js
src/styles/: calendar.css  components.css  context-menu.css  features.css  groups.css  main.css  settings.css
