[package]
name = "lumina-mail"
version = "0.1.0"
description = "Lumina Mail - Chat-style Email Client"
authors = ["bongpark"]
edition = "2021"

[lib]
name = "lumina_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"
async-imap = "0.10"
async-native-tls = "0.5"
mailparse = "0.15"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
open = "5"
image = "0.25.10"
tauri-plugin-dialog = "2.6.0"
regex = "1.12.3"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
encoding_rs = "0.8.35"
mime_guess = "2"



